# Quantity

./: .gitignore  CMakeLists.txt
src/: AffineScale.cpp  AffineScale.h  AffineUnit.cpp  AffineUnit.h  AffineUnitImpl.cpp  AffineUnitImpl.h  BaseInfo.cpp  BaseInfo.h  BaseQuantity.cpp  BaseQuantity.h  BaseUnit.cpp  BaseUnit.h  BaseUnitImpl.cpp  BaseUnitImpl.h  CMakeLists.txt  Calendar.cpp  Calendar.h  CalendarImpl.h  CanonicalUnit.cpp  CanonicalUnit.h  Converter.cpp  Converter.h  ConverterImpl.h  DerivedUnit.cpp  DerivedUnit.h  DimFactor.cpp  DimFactor.h  DimFactorImpl.cpp  DimFactorImpl.h  DimSet.h  DimSetImpl.h  Dimension.cpp  Dimension.h  DimensionEqual.h  DimensionHash.h  DimensionLess.h  Dimensionality.cpp  Dimensionality.h  DimensionalityImpl.cpp  DimensionalityImpl.h  (+36 more)
test/: AffineScale_test.cpp  AffineUnit_test.cpp  BaseInfo_test.cpp  BaseQuantity_test.cpp  BaseUnit_test.cpp  CMakeLists.txt  Calendar_test.cpp  CanonicalUnit_test.cpp  DerivedUnit_test.cpp  DimFactor_test.cpp  Dimension_test.cpp  Dimensionality_test.cpp  Exponent_test.cpp  Quantity_test.cpp  Qvalue_test.cpp  RefLogUnit_test.cpp  Timestamp_test.cpp  UnrefLogUnit_test.cpp
