add_library(libquant OBJECT
    Dimension.cpp           Dimension.h
    BaseInfo.cpp            BaseInfo.h
    Unit.cpp                Unit.h
                            OrderedUnit.h
                            UnorderedUnit.h
    CanonicalUnit.cpp       CanonicalUnit.h
    AffineUnit.cpp          AffineUnit.h
    Exponent.cpp            Exponent.h
    Calendar.cpp            Calendar.h
    )
