add_library(libquant OBJECT
#   Dimension.cpp           Dimension.h
    BaseInfo.cpp            BaseInfo.h
    Unit.cpp                Unit.h
                            UnorderedUnit.h
    CanonicalUnit.cpp       CanonicalUnit.h
    AffineUnit.cpp          AffineUnit.h
    Exponent.cpp            Exponent.h
    Timestamp.cpp           Timestamp.h
    Calendar.cpp            Calendar.h
                            CalendarImpl.h
    GregorianCalendar.cpp   GregorianCalendar.h
    Timestamp.cpp           Timestamp.h
    TimestampImpl.cpp       TimestampImpl.h
    GregorianTimestamp.cpp  GregorianTimestamp.h
    Converter.cpp           Converter.h
                            ConverterImpl.h
    LogUnit.cpp             LogUnit.h
    RefLogUnit.cpp          RefLogUnit.h
    UnrefLogUnit.cpp        UnrefLogUnit.h
    Dimensionality.cpp      Dimensionality.h
                            Quantity.h
    )
